--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@types/config": "^3.3.4",
         "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.17",
+        "@types/express-fileupload": "^1.5.0",
         "@types/http-errors": "^2.0.1",
         "@types/jest": "^29.5.4",
+        "@types/mongoose-aggregate-paginate-v2": "^1.0.12",
         "@types/node": "^20.5.9",
         "@types/supertest": "^2.0.12",
         "@types/uuid": "^9.0.8",
@@ -48,17 +50,20 @@
         ]
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.556.0",
         "config": "^3.3.11",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "express": "^4.18.2",
+        "express-fileupload": "^1.5.0",
         "express-jwt": "^8.4.1",
         "express-validator": "^7.0.1",
         "http-errors": "^2.0.0",
         "js-yaml": "^4.1.0",
         "jwks-rsa": "^3.1.0",
         "mongoose": "^8.3.1",
+        "mongoose-aggregate-paginate-v2": "^1.0.7",
         "uuid": "^9.0.1",
         "winston": "^3.10.0"
     }
