--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "http-errors": "^2.0.0",
         "js-yaml": "^4.1.0",
         "jwks-rsa": "^3.1.0",
+        "kafkajs": "^2.2.4",
         "mongoose": "^8.3.1",
         "mongoose-aggregate-paginate-v2": "^1.0.7",
         "uuid": "^9.0.1",
